RESOLVED FIXED57095
[Qt] The keyboard shortcuts during fullscreen playback do not work.
https://bugs.webkit.org/show_bug.cgi?id=57095
Summary [Qt] The keyboard shortcuts during fullscreen playback do not work.
Alexis Menard (darktears)
Reported 2011-03-25 05:39:40 PDT
Launch QtTestBrowser, go to tiny.cc/wkmedia. Play a video, enter fullscreen. Pressing esc does not quit the fullscreen mode, pressing space does nothing. But if you click and then use the shortcuts it works.
Attachments
Proposed patch. (1.20 KB, patch)
2011-03-25 05:42 PDT, Alexis Menard (darktears)
no flags
V2 with better changelog. (1.19 KB, patch)
2011-03-25 05:44 PDT, Alexis Menard (darktears)
no flags
Alexis Menard (darktears)
Comment 1 2011-03-25 05:42:50 PDT
Created attachment 86923 [details] Proposed patch.
Alexis Menard (darktears)
Comment 2 2011-03-25 05:44:12 PDT
Created attachment 86924 [details] V2 with better changelog.
Andreas Kling
Comment 3 2011-03-25 05:46:02 PDT
Comment on attachment 86924 [details] V2 with better changelog. LGTM
WebKit Commit Bot
Comment 4 2011-03-25 07:15:39 PDT
Comment on attachment 86924 [details] V2 with better changelog. Clearing flags on attachment: 86924 Committed r81959: <http://trac.webkit.org/changeset/81959>
WebKit Commit Bot
Comment 5 2011-03-25 07:15:44 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 6 2011-03-25 09:47:50 PDT
http://trac.webkit.org/changeset/81959 might have broken Windows 7 Release (Tests) The following tests are not passing: http/tests/websocket/tests/frame-length-skip.html
Note You need to log in before you can comment on or make changes to this bug.