2011-03-25  Alexis Menard  <alexis.menard@openbossa.org>

Reviewed by Andreas Kling.

        [Qt] The keyboard shortcuts during fullscreen playback do not work.
        https://bugs.webkit.org/show_bug.cgi?id=57095

        We need to explicitely set the focus on the widget in order to receive the keyboard events.

        * WebCoreSupport/FullScreenVideoWidget.cpp:
        (WebCore::FullScreenVideoWidget::show):

Canonical link: https://commits.webkit.org/71767@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81959 268f45cc-cd09-0410-ab3c-d52691b4dbfc